--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+#hero {
+  background: url("../../public/images/HeroImage.svg") no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
+/*
+================
+Hero Media Query
+================
+*/
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@media (max-width: 1200px) {
+  #hero {
+    height: 90vh;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (max-width: 992px) {
+  #hero {
+    height: 80vh;
+  }
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@media (max-width: 768px) {
+  #hero {
+    height: 70vh;
+  }
+}
+
+@media (max-width: 576px) {
+  #hero {
+    height: 60vh;
   }
 }
